--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   "dependencies": {
     "@astrojs/react": "^4.3.0",
     "@astrojs/solid-js": "^5.1.0",
+    "@nanostores/react": "^1.0.0",
     "@tailwindcss/vite": "^4.1.11",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "@types/youtube": "^0.1.2",
     "astro": "^5.10.2",
     "gsap": "^3.13.0",
     "nanostores": "^1.0.1",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "solid-js": "^1.9.7",
     "tailwindcss": "^4.1.11"
   }
